# prop_predictor

./: Dockerfile  main.py
src/: README.md  setup.py
src/prop_predict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/proppredict/: predictor.py
tests/: model_class_test.ipynb  setup.cfg
tests/old/: predictor.py  predictor_v1.py
