[metadata]
name = prop-predict
version = 0.0.1
author = Simeon Thomas
author_email = thomasolaoluwa@gmail.com
description = A Python package for Propensity Modeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olaoluthomas/prop_predictor
project_urls =
    Bug Tracker = https://github.com/olaoluthomas/prop_predictor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas==1.1.5,
    statsmodels==0.12.2,
    xgboost==1.5.2,
    numpy==1.19.5,
    scikit-learn==0.24.2

[options.extras_require]

    
[options.packages.find]
where = src
